--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
     --fs-body: 1rem;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 600px) {
     :root {
         --fs-h1: 4.5rem;
         --fw-h2: 3.75rem;
@@ -43,11 +43,20 @@ body {
     line-height: 1.6;
 }
 
+header {
+    padding: 0em 3em;
+}
+
+section {
+    padding: 5em 7em;
+}
+
 img {
     display: block;
     max-width: 100%;
 }
 
+strong { font-weight: var(--fw-bold);}
 
 /* Typography */
 
@@ -61,3 +70,58 @@ h3 {
 h1 { font-size: var(--fs-h1) }
 h2 { font-size: var(--fs-h2) }
 h3 { font-size: var(--fs-h3) }
+
+.section__title {
+    margin-bottom: .25em;
+}
+
+.section__title--intro {
+    font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong {
+    display: block;
+}
+
+.section__subtitle {
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+    background: var(--clr-accent);
+    font-family: var(--ff-secondary);
+    margin-bottom: 1em;
+}
+
+/* Intro section */
+
+.intro {
+    position: relative;
+}
+
+@media (min-width: 800px) {
+    .intro {
+        display: grid;
+        width: min-content;
+        margin: 0 auto;
+        column-gap: 1em;
+        grid-template-areas: 
+            "img title"
+            "img subtitle";
+        grid-template-columns: min-content max-content;
+    }
+
+    .intro__img {
+        grid-area: img;
+        min-width: 250px;
+    }
+
+    .section__subtitle--intro {
+        align-self: start;
+        grid-column: -.5 / 1;
+        text-align: right;
+        position: relative;
+    }
+}
