--- a/style.css
+++ b/style.css
@@ -312,12 +312,24 @@ header {
 
 .portfolio__item {
     background: var(--clr-accent);
+    border: 1px solid #000000;
     position: relative;
     overflow: hidden;
     padding: .5em;
     border-radius: 10px;
     justify-content: space-between;
+    transition: transform 300ms cubic-bezier(.5, 0, .5, 1), box-shadow 300ms cubic-bezier(.5,0,.5,1);
+    z-index: 1;
 }
+
+@media (min-width: 800px) {
+    .portfolio__item:hover {
+        transform: scale(1.3);
+        z-index: 100;
+        box-shadow: var(--bs);
+    }
+}
+
 
 .portfolio__link {
     position: absolute;
