--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
     --fs-body: 1rem;
 
     --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25), 0.125em 0.125em 0.25em rgba(0,0,0,.125);
+    /*--bs-strong: 0 0.5em 1.5em rgba(0,0,0,0.3), 0 0.25em 0.75em rgba(0,0,0,0.2);*/
+    --bs-strong: 0 1em 2em rgba(0,0,0,0.35), 0 0.5em 1em rgba(0,0,0,0.25);
 }
 
 @media (min-width: 600px) {
@@ -312,7 +314,6 @@ header {
 
 .portfolio__item {
     background: var(--clr-accent);
-    border: 1px solid #000000;
     position: relative;
     overflow: hidden;
     padding: .5em;
@@ -320,13 +321,14 @@ header {
     justify-content: space-between;
     transition: transform 300ms cubic-bezier(.5, 0, .5, 1), box-shadow 300ms cubic-bezier(.5,0,.5,1);
     z-index: 1;
+    box-shadow: var(--bs);
 }
 
 @media (min-width: 800px) {
     .portfolio__item:hover {
         transform: scale(1.3);
         z-index: 100;
-        box-shadow: var(--bs);
+        box-shadow: var(--bs-strong);
     }
 }
 
