--- a/src/components/header/Navigation.astro
+++ b/src/components/header/Navigation.astro
@@ -13,5 +13,7 @@
   .header-nav-link {
     @apply transition;
     @apply hover:text-primary;
+    @apply hover:underline;
+    @apply hover:decoration-solid;
   }
 </style>
