--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -3,7 +3,7 @@ import SocialIcon from '../SocialIcon.astro';
 import { Icon } from 'astro-icon/components';
 ---
 
-<footer class="w-screen h-20">
+<footer class="w-full h-20">
   <div
     class="h-full flex justify-center items-center gap-4 bg-neutral text-neutral-content"
   >
