--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,9 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-base-200 flex flex-col min-h-screen">
+  <body
+    class="bg-base-200 flex flex-col min-h-screen max-w-full m-0 overflow-x-hidden"
+  >
     <Header />
     <main class="flex-grow">
       <slot />
