--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import { Image } from 'astro:assets';
 import { getImage } from 'astro:assets';
 import localBioPhoto from '../images/portrait-danielle-2022.jpg';
 import scraperPortImg from '../images/mercari-scraper-email-screenshot.png';
+import shiftsGif from '../images/shifts-resized.gif';
 import FixedSocialsBox from '../components/FixedSocialsBox.astro';
 import backgroundImage from '../images/md-geometric-bg.jpg';
 import PortfolioItem from '../components/PortfolioItem.astro';
 import SocialIcon from '../components/SocialIcon.astro';
 const optimizedBgImage = await getImage({ src: backgroundImage });
+const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
 ---
 
 <Layout title="Crockett Ford">
@@ -30,13 +32,15 @@ const optimizedBgImage = await getImage({ src: backgroundImage });
     md:h-min
     md:[grid-template-areas:'head_image''para_image']
     md:[grid-template-columns:2fr_1.5fr]
-    md:[grid-template-rows:1fr_2fr]"
+    md:[grid-template-rows:1fr_2fr]
+    lg:my-24
+    lg:mb-60"
   >
     <h1
       data-aos="fade-right"
       class="font-slab text-3xl md:place-self-auto self-start lg:self-end md:text-6xl font-bold [grid-area:head]"
     >
-      This is the home page
+      Crockett Ford
     </h1>
 
     <div
@@ -46,19 +50,29 @@ const optimizedBgImage = await getImage({ src: backgroundImage });
       <Image src={localBioPhoto} alt="A portrait of Crockett" class="" />
     </div>
 
-    <div class="[grid-area:para] my-auto flex flex-col gap-8 pr-8">
+    <div class="[grid-area:para] my-auto flex flex-col gap-8 pr-8 text-lg">
       <p data-aos="fade-in" class="font-sans">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti nemo
-        reprehenderit optio obcaecati aliquam repellat quas earum, qui quis
-        libero assumenda, ratione eos quia minus? Consequuntur quae expedita
-        nemo quaerat!
+        I'm a <strong>developer</strong> making apps, tools, websites and more <strong
+          >end-to-end</strong
+        >. If you're here to see what I can do, take a look at some of my <a
+          class="text-primary font-semibold hover:underline"
+          href="#work">work</a
+        > below.
       </p>
 
       <p data-aos="fade-in" class="font-sans">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
-        unde architecto perspiciatis laudantium, nihil nostrum odit consectetur?
-        Incidunt blanditiis dolore debitis! Odio id placeat facilis culpa, minus
-        voluptatibus tempore provident.
+        This website is equal parts professional and personal. I was recently
+        inspired by <a
+          class="text-primary font-semibold hover:underline"
+          href="https://www.youtube.com/watch?v=_x6SCSz7g5I"
+          target="_blank"
+          rel="noopener noreferrer">this video</a
+        > to reconsider the potential of a personal website. So, to mix a bit of the old internet into the new, here you
+        can find my <a
+          class="text-primary font-semibold hover:underline"
+          href="/blog/">blog</a
+        >, where I write about movies, books, and anything else that has my
+        attention.
       </p>
     </div>
   </div>
@@ -82,6 +96,20 @@ const optimizedBgImage = await getImage({ src: backgroundImage });
         imageSrc={scraperPortImg}
         imageLink="https://github.com/frockett/product-scraper"
         imageAlt="a screenshot of an email containing a list full of flagged listings"
+      />
+      <PortfolioItem
+        projectTitle="Shift-Logger API"
+        projectDescription="A basic ASP.net Core Web API and a console app that consumes it. Log shifts and track employees."
+        tagList={['.Net', 'Asp.Net Core', 'Web API', 'Swagger']}
+        iconLinks={[
+          {
+            link: 'https://github.com/frockett/Console-ShiftTracker',
+            icon: 'bi:github',
+          },
+        ]}
+        imageSrc={shiftsGif}
+        imageLink="https://github.com/frockett/Console-ShiftTracker"
+        imageAlt="A gif showing the operation of the shift tracker console app."
       />
     </ul>
   </div>
