blog posts, blog page, blog links

--- a/src/components/header/Navigation.astro
+++ b/src/components/header/Navigation.astro
@@ -3,7 +3,7 @@
 ---
 
 <div id="header-links" class="font-sans font-bold flex gap-5">
-  <a href="#home" class="header-nav-link">Home</a>
+  <a href="/" class="header-nav-link">Home</a>
   <a class="header-nav-link" href="#work">Projects</a>
   <a class="header-nav-link" href="/blog/">Blog</a>
   <a class="header-nav-link" href="/public/Resume-Crockett-Ford.pdf">Resume</a>
