--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,9 +52,9 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
 
     <div class="[grid-area:para] my-auto flex flex-col gap-8 pr-8 text-lg">
       <p data-aos="fade-in" class="font-sans">
-        I'm a <strong>developer</strong> making apps, tools, websites and more <strong
-          >end-to-end</strong
-        >. If you're here to see what I can do, take a look at some of my <a
+        I'm a <strong>developer</strong> who makes <strong>end-to-end</strong> apps,
+        tools, websites and more. If you're here to see what I can do, take a look
+        at some of my <a
           class="text-primary font-semibold hover:underline"
           href="#work">work</a
         > below.
@@ -67,8 +67,8 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
           href="https://www.youtube.com/watch?v=_x6SCSz7g5I"
           target="_blank"
           rel="noopener noreferrer">this video</a
-        > to reconsider the potential of a personal website. So, to mix a bit of the old internet into the new, here you
-        can find my <a
+        > to reconsider the potential of a personal website. So, to mix a bit of
+        the old internet into the new, here you can find my <a
           class="text-primary font-semibold hover:underline"
           href="/blog/">blog</a
         >, where I write about movies, books, and anything else that has my
