fixed font import for fresh build

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import '@fontsource-variable/inter';
+import '@fontsource-variable/roboto-slab';
 import Footer from '../components/footer/Footer.astro';
 import Header from '../components/header/Header.astro';
 interface Props {
