--- a/src/components/header/ThemeController.astro
+++ b/src/components/header/ThemeController.astro
@@ -19,12 +19,14 @@
       d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"
     ></path>
   </svg>
+
   <input
     id="themeToggle"
     type="checkbox"
-    value="darkCustom"
-    class="toggle theme-controller"
+    data-toggle-theme="darkCustom,lightCustom"
+    class="toggle"
   />
+
   <svg
     xmlns="http://www.w3.org/2000/svg"
     width="20"
@@ -42,45 +44,10 @@
 
 <script>
   const themeToggle = document.getElementById('themeToggle');
-  const preferredTheme = checkForPreference();
-  let storedTheme = localStorage.getItem('theme');
+  let theme;
 
   document.addEventListener('DOMContentLoaded', () => {
-    if (!storedTheme) {
-      storedTheme = preferredTheme;
-    }
-    syncThemeToggle(storedTheme, getToggleState());
-    updatePreference(getToggleState());
+    theme = document.documentElement.getAttribute('data-theme');
+    themeToggle.checked = theme === 'darkCustom' ? true : false;
   });
-
-  function getToggleState() {
-    return themeToggle.checked;
-  }
-
-  themeToggle.addEventListener('click', (e) => {
-    updatePreference(e.target.checked);
-  });
-
-  function syncThemeToggle(storedTheme, isChecked) {
-    if (
-      (storedTheme === 'light' && isChecked) ||
-      (storedTheme === 'dark' && !isChecked)
-    ) {
-      themeToggle.checked = !isChecked;
-    }
-  }
-
-  function updatePreference(isChecked) {
-    isChecked === true
-      ? localStorage.setItem('theme', 'dark')
-      : localStorage.setItem('theme', 'light');
-  }
-
-  function checkForPreference() {
-    if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-      return 'dark';
-    } else {
-      return 'light';
-    }
-  }
 </script>
