--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
   <head>
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"
     ></script>
-    <script>
+    <script is:inline>
       function checkForPreference() {
         if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
           return 'darkCustom';
