--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -26,12 +26,22 @@ const hasImage = frontmatter.image ? true : false;
     <h1 class="font-slab font-bold text-2xl sm:text-4xl">{frontmatter.title}</h1>
     <div class="italic text-xl">{frontmatter.description}</div>
     <div class="text-sm">{frontmatter.pubDate.toDateString()}</div>
+    <div class="flex gap-2 items-center justify-end">
+      {frontmatter.tags.map((tag) => (
+      <a href=`/blog/tags/${tag}`>
+        <p class="transition border-dotted border-2 border-primary hover:border-base-content hover:bg-primary rounded-full p-1 px-2 font-semibold hover:text-white w-min hover:underline">{tag}</p>
+      </a>
+    ))}
+    </div>
   </div>
+
+
 
   <div
     class="mx-auto px-8  mb-32 max-w-4xl text-lg leading-8 font-sans rounded-md"
   >
     <slot />
     <div class="flex justify-end"><a class="text-primary hover:underline font-semibold" href="/blog/">Return to blog</a></div>
+
   </div>
 </Layout>
