--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,6 +3,7 @@ import { getCollection } from 'astro:content';
 import Card from '../../components/Card.astro';
 import Layout from '../../layouts/Layout.astro';
 import BlogLinkSimple from '../../components/BlogLinkSimple.astro';
+import TagList from '../../components/TagList.astro';
 
 const allPosts = await getCollection('posts');
 ---
@@ -14,11 +15,12 @@ const allPosts = await getCollection('posts');
     body="Woopy doopy oh yeah let's click this link you know what time it is hell yeah bro"
   /> -->
 
+  <div style="border:1px solid red" class="max-w-3xl mx-auto p-4">
+    <TagList />
+  </div>
+
   <div>
-    <ul
-      class="flex flex-col gap-8 max-w-3xl m-8 p-4 mx-auto"
-      style=""
-    >
+    <ul class="flex flex-col gap-8 max-w-3xl m-8 p-4 mx-auto" style="">
       {
         allPosts.map((post) => (
           <BlogLinkSimple
