styles and post sorting

--- a/src/components/BlogLinkSimple.astro
+++ b/src/components/BlogLinkSimple.astro
@@ -5,9 +5,11 @@ const { title, url, description, pubDate } = Astro.props;
 
 <li class="flex flex-col">
   <div class="italic text-sm mb-1">{pubDate.toDateString()}</div>
-  <a
-    class="transition text-primary font-semibold text-lg md:text-xl hover:underline"
-    href={url}>{title}</a
-  >
+  <div>
+    <a
+      class="transition text-primary font-semibold text-lg md:text-xl hover:underline inline"
+      href={url}>{title}</a
+    >
+  </div>
   <div class="mt-1">{description}</div>
 </li>
