--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -26,10 +26,10 @@ const hasImage = frontmatter.image ? true : false;
     <h1 class="font-slab font-bold text-2xl sm:text-4xl">{frontmatter.title}</h1>
     <div class="italic text-xl">{frontmatter.description}</div>
     <div class="text-sm">{frontmatter.pubDate.toDateString()}</div>
-    <div class="flex gap-2 items-center justify-end">
+    <div class="flex gap-2 items-center justify-start">
       {frontmatter.tags.map((tag) => (
       <a href=`/blog/tags/${tag}`>
-        <p class="transition border-dotted border-2 border-primary hover:border-base-content hover:bg-primary rounded-full p-1 px-2 font-semibold hover:text-white w-min hover:underline">{tag}</p>
+        <p class="transition border-dotted border-2 border-primary hover:bg-primary rounded-full p-1 px-2 font-semibold hover:text-white w-min hover:underline">{tag}</p>
       </a>
     ))}
     </div>
