refactored sorting into a script and changed colors for better contrast

--- a/src/components/BlogLinkSimple.astro
+++ b/src/components/BlogLinkSimple.astro
@@ -7,7 +7,7 @@ const { title, url, description, pubDate } = Astro.props;
   <div class="italic text-sm mb-1">{pubDate.toDateString()}</div>
   <div>
     <a
-      class="transition text-primary font-semibold text-lg md:text-xl hover:underline inline"
+      class="transition text-primary-content font-semibold text-lg md:text-xl hover:underline inline"
       href={url}>{title}</a
     >
   </div>
