--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
         I'm a <strong>developer</strong> who makes <strong>end-to-end</strong> apps,
         tools, websites and more. If you're here to see what I can do, take a look
         at some of my <a
-          class="text-primary font-semibold hover:underline"
+          class="text-primary-content font-semibold hover:underline"
           href="#work">work</a
         > below.
       </p>
@@ -63,13 +63,13 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
       <p data-aos="fade-in" class="font-sans">
         This website is equal parts professional and personal. I was recently
         inspired by <a
-          class="text-primary font-semibold hover:underline"
+          class="text-primary-content font-semibold hover:underline"
           href="https://www.youtube.com/watch?v=_x6SCSz7g5I"
           target="_blank"
           rel="noopener noreferrer">this video</a
         > to reconsider the potential of a personal website. So, to mix a bit of
         the old internet into the new, here you can find my <a
-          class="text-primary font-semibold hover:underline"
+          class="text-primary-content font-semibold hover:underline"
           href="/blog/">blog</a
         >, where I write about movies, books, and anything else that has my
         attention.
