portfolio cards section title and hover translate

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -116,9 +116,11 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
       />
     </ul>
   </div>
-
+  <div class="mx-auto mt-8 p-8 px-16 md:max-w-7xl">
+    <h2 class="font-sans text-2xl sm:text-4xl font-bold">Other Projects</h2>
+  </div>
   <div
-    class="md:max-w-7xl grid sm:grid-cols-2 md:grid-cols-3 mx-auto gap-4 p-8 px-16 mb-16"
+    class="md:max-w-7xl grid sm:grid-cols-2 md:grid-cols-3 mx-auto gap-6 p-4 px-16 mb-32"
     style="grid-auto-rows:1fr;"
   >
     <PortfolioCard
