--- a/src/components/PortfolioCard.astro
+++ b/src/components/PortfolioCard.astro
@@ -5,7 +5,7 @@ const { projectTitle, projectDescription, tagList, iconLinks } = Astro.props;
 ---
 
 <div
-  class="bg-base-300 rounded-md min-h-80 shadow-md shadow-[rgba(50, 50, 93, 0.25)] p-6 flex flex-col justify-between gap-2"
+  class="transition bg-base-300 hover:-translate-y-2 rounded-md min-h-80 shadow-md shadow-[rgba(50, 50, 93, 0.25)] p-6 flex flex-col justify-between gap-2"
 >
   <div class="links flex gap-4 justify-end">
     {
