--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -7,9 +7,21 @@ import { Icon } from 'astro-icon/components';
   <div
     class="h-full flex justify-center items-center gap-4 bg-neutral text-neutral-content"
   >
-    <SocialIcon link="https://github.com/frockett" icon="bi:github" />
-    <SocialIcon link="https://x.com/_crockettford" icon="bi:twitter-x" />
-    <SocialIcon link="mailto:crockett.d.ford@gmail.com" icon="bi:envelope" />
+    <SocialIcon
+      ariaLabel="link to Crockett's Github"
+      link="https://github.com/frockett"
+      icon="bi:github"
+    />
+    <SocialIcon
+      ariaLabel="link to Crockett's Twitter"
+      link="https://x.com/_crockettford"
+      icon="bi:twitter-x"
+    />
+    <SocialIcon
+      ariaLabel="click to send Crockett an email"
+      link="mailto:crockett.d.ford@gmail.com"
+      icon="bi:envelope"
+    />
   </div>
 </footer>
 
