--- a/src/components/header/ThemeController.astro
+++ b/src/components/header/ThemeController.astro
@@ -25,6 +25,7 @@
     type="checkbox"
     data-toggle-theme="darkCustom,lightCustom"
     class="toggle"
+    aria-label="dark and light theme toggle"
   />
 
   <svg
