fixed repo link for sales-tracking app

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -163,7 +163,7 @@ const opttimizedScraperPortImg = await getImage({ src: scraperPortImg });
       tagList={['.Net', 'EF Core', 'SQLite']}
       iconLinks={[
         {
-          link: 'https://github.com/frockett',
+          link: 'https://github.com/frockett/sales-tracking-app',
           icon: 'bi:github',
         },
       ]}
