added image optimizations on index page

--- a/src/components/PortfolioItem.astro
+++ b/src/components/PortfolioItem.astro
@@ -56,6 +56,8 @@ const {
       >
         <Image
           class="opacity-90 hue-rotate-30 rounded"
+          inferSize
+          quality={80}
           src={imageSrc}
           alt={imageAlt}
         />
