--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -4,7 +4,7 @@ import ThemeController from './ThemeController.astro';
 ---
 
 <header
-  class="w-screen flex justify-between items-center p-8 text-sm h-20 lg:text-lg"
+  class="w-screen flex justify-between items-center py-8 sm:px-8 px-4 text-sm h-20 lg:text-lg"
 >
   <div class="font-slab font-bold text-secondary"></div>
   <div class="w-min flex shrink items-center gap-8">
