--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,6 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
@@ -50,10 +49,9 @@ const { title } = Astro.props;
     </main>
     <Footer />
 
-    <script is:inline src="https://unpkg.com/aos@next/dist/aos.js">
-      lt;
-    </script>
-    <script is:inline>
+    <script async>
+      import AOS from 'aos';
+      import 'aos/dist/aos.css';
       AOS.init();
     </script>
 
